--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -6,7 +6,16 @@
 
     <CheckBox
         android:id="@+id/task_done_checkbox"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="50dp"
-        android:text="TaskName"/>
+        android:text="TaskName"
+        android:layout_weight="10"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginTop="10dp"
+        android:src="@android:drawable/ic_menu_delete"
+        android:layout_weight="1"
+        android:contentDescription="@string/alt_img_delete"/>
 </LinearLayout>
