--- a/app/src/main/res/layout/activity_create_task.xml
+++ b/app/src/main/res/layout/activity_create_task.xml
@@ -25,8 +25,7 @@
         android:hint="@string/create_task_input_placeholder"
         android:inputType="text"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        />
+        android:layout_marginRight="8dp" />
 
     <!-- Create task -->
     <Button
