--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -13,9 +13,16 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:src="@android:drawable/ic_menu_delete"
-        android:layout_weight="1"
-        android:contentDescription="@string/alt_img_delete"/>
+        android:layout_weight="2"
+        android:contentDescription="@string/alt_img_delete"
+        android:onClick="delete_task"/>
+
+    <TextView
+        android:id="@+id/task_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible" />
 </LinearLayout>
