--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -2,27 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal">
 
     <CheckBox
         android:id="@+id/task_done_checkbox"
-        android:layout_width="250dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
-        android:text="TaskName"
+        tools:text="TaskName"
         android:layout_weight="10"/>
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
         android:layout_marginTop="10dp"
         android:src="@android:drawable/ic_menu_delete"
-        android:layout_weight="2"
         android:contentDescription="@string/alt_img_delete"
         android:onClick="delete_task"/>
-
-    <TextView
-        android:id="@+id/task_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="invisible" />
 </LinearLayout>
