--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- Linear layout -->
     <LinearLayout
@@ -19,11 +20,11 @@
             android:orientation="vertical" />
 
         <!-- Add a task button -->
-        <Button
+        <!--<Button
             android:id="@+id/btn_create_task"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/btn_create_task" />
+            android:text="@string/btn_create_task" />-->
 
     </LinearLayout>
 
@@ -35,5 +36,15 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:text="@string/no_task_yet_msg" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btn_create_task"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="15dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="15dp"
+        app:srcCompat="@drawable/plus" />
 
 </RelativeLayout>
